# learnopengl

./: .gitignore  CMakeLists.txt  README.MD
src/: main.cpp  shader.cpp  shader.hpp
src/shaders/: shader.fs  shader.vs
